--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,5 +4,9 @@ module(
 )
 
 # Bazel module dependencies
-bazel_dep(name = "rules_cc", version = "0.0.9")
-bazel_dep(name = "rules_python", version = "0.31.0")
+bazel_dep(name = "rules_cc", version = "0.1.1")
+bazel_dep(name = "rules_python", version = "0.40.0")
+
+# Python toolchain setup - no dependency management, just toolchain
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.toolchain(python_version = "3.10")
